ENG-222: Fix overflow bug

--- a/src/renderer/view/components/notifications/RecentActivities.css
+++ b/src/renderer/view/components/notifications/RecentActivities.css
@@ -1,5 +1,6 @@
 .list-dark::-webkit-scrollbar {
 	width: 6px;
+	height: 6px;
 	background: var(--chakra-colors-thia-gray-600);
 }
 
